Fixing overflow.

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -394,7 +394,7 @@ body {
         text-decoration: none;
         display: flex;
         justify-content: space-between;
-        width: 100%;
+        width: calc(100% - 20px);
         align-items: center;
         margin-left: 10px;
         margin-right: 10px;
